--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "email2postwp": "bin/index.js"
   },
   "scripts": {
-    "start": "node bin/index.js",
-    "build": "./node_modules/.bin/webpack",
-    "dev-server": "node_modules/.bin/http-server -p 3000 dist/",
+    "start": "npm run-script serve",
+    "run": "node bin/index.js",
+    "build-dev": "gulp dev",
+    "build": "gulp build",
+    "serve": "gulp serve",
     "test": "test"
   },
   "author": {
